--- a/MetadataDocument/templates/login.html
+++ b/MetadataDocument/templates/login.html
@@ -25,6 +25,9 @@
             <a class="nav-link" href="/document">Documents</a>
           </li>
         </ul>
+        <span class="navbar-text">
+          <a href="/register" class="btn btn-sm btn-info">Register</a>
+        </span>
       </div>
     </nav>
   </header>
